--- a/01-InicioVue/package.json
+++ b/01-InicioVue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
